--- a/grid-item/justify-self.html
+++ b/grid-item/justify-self.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Grid Item</title>
     <link rel="stylesheet" href="../global.css" type="text/css" />
-    <link rel="stylesheet" href="grid-area.css" type="text/css" />
+    <link rel="stylesheet" href="justify-self.css" type="text/css" />
   </head>
   <body>
-    <h1>3 . grid-area</h1>
+    <h1>4 . justify-self</h1>
 
     <div>
-      <h1>grid-area: 1 / 2 / 4 / 3;</h1>
-      <section class="grid grid-area-1">
+      <h1>justify-self: start;</h1>
+      <section class="grid start">
         <div class="item item-1">1</div>
         <div class="item item-2">2</div>
         <div class="item item-3">3</div>
@@ -23,40 +23,38 @@
     </div>
 
     <div>
-      <h1>grid-area: header;</h1>
-      <section class="grid grid-area-2">
+      <h1>justify-self: end;</h1>
+      <section class="grid end">
         <div class="item item-1">1</div>
         <div class="item item-2">2</div>
         <div class="item item-3">3</div>
         <div class="item item-4">4</div>
-        <div class="item item-5">5</div>
+        <div class="item item-5">Item 5</div>
         <div class="item item-6">6</div>
       </section>
     </div>
 
     <div>
-      <h1>grid-area</h1>
-      <section class="grid grid-area-3">
+      <h1>justify-self: center;</h1>
+      <section class="grid center">
         <div class="item item-1">1</div>
         <div class="item item-2">2</div>
         <div class="item item-3">3</div>
         <div class="item item-4">4</div>
-        <div class="item item-5">5</div>
+        <div class="item item-5">Item 5</div>
         <div class="item item-6">6</div>
-        <div class="item item-7">7</div>
-        <div class="item item-8">8</div>
-        <div class="item item-9">9</div>
-        <div class="item item-10">10</div>
-        <div class="item item-11">11</div>
-        <div class="item item-12">12</div>
-        <div class="item item-13">13</div>
-        <div class="item item-14">14</div>
-        <div class="item item-15">15</div>
-        <div class="item item-16">16</div>
-        <div class="item item-17">17</div>
-        <div class="item item-18">18</div>
-        <div class="item item-19">19</div>
-        <div class="item item-20">20</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>justify-self: stretch;</h1>
+      <section class="grid stretch">
+        <div class="item item-1">1</div>
+        <div class="item item-2">2</div>
+        <div class="item item-3">3</div>
+        <div class="item item-4">4</div>
+        <div class="item item-5">Item 5</div>
+        <div class="item item-6">6</div>
       </section>
     </div>
   </body>
